--- a/ahlbs-junit-testing/src/main/resources/application.properties
+++ b/ahlbs-junit-testing/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.username=root
+spring.datasource.password=secretpassword
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
